fix dark mode input, build linux binary add banner

--- a/setup/react/app/type.css
+++ b/setup/react/app/type.css
@@ -31,7 +31,7 @@ avaialble application-wide
 
 @font-face {
   font-family: 'Utendo';
-  src: url('../assets/fonts/utendo/Utendo-SemiBold.ttf');
+  src: url('../assets/fonts/utendo/Utendo-Semibold.ttf');
   font-weight: 500;
   font-style: normal;
 }
